fix: Avoid stick hover on mobile
Cf https://css-tricks.com/solving-sticky-hover-states-with-media-hover-hover/

--- a/src/cozy/_forms.scss
+++ b/src/cozy/_forms.scss
@@ -4,17 +4,19 @@
   cursor: pointer;
 }
 
-.form-check-input:hover::after {
-  position: absolute;
-  top: -100%;
-  left: -100%;
-  display: block;
-  width: 300%;
-  height: 300%;
-  pointer-events: none;
-  content: "";
-  background: var(--btn-primary-shadow-color);
-  border-radius: 50%;
+@media (hover: hover) {
+  .form-check-input:hover::after {
+    position: absolute;
+    top: -100%;
+    left: -100%;
+    display: block;
+    width: 300%;
+    height: 300%;
+    pointer-events: none;
+    content: "";
+    background: var(--btn-primary-shadow-color);
+    border-radius: 50%;
+  }
 }
 
 .form-control {
